# gts-rs

./: .gitignore  Cargo.toml  README.md
data/: char_map.json
docs/: app.md  changes.md
src/: dns_server.rs  http_server.rs  main.rs
src/pkm_utils/: README.md  data_maps.rs  gts.rs  internal_types.rs  lib.rs  macros.rs  pokemon.rs
