[package]
name = "gts-rs"
version = "0.1.0"
edition = "2024"
authors = ["Bolu <bolu@tuta.io>"]

[lib]
name = "pkm_utils"
path = "src/pkm_utils/lib.rs"

[[bin]]
name = "gts-rs"
path = "src/main.rs"

[profile.release]
lto = "thin"

[dependencies]
actix-web = { version = "4.11.0", default-features = false, features = ["macros"] }
base64 = { version = "0.22.1", default-features = false }
bimap = { version = "0.6.3", features = ["serde"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
env_logger = "0.11.8"
futures = { version = "0.3.31", default-features = false }
getset = { version = "0.1.5", default-features = false }
hickory-client = { version = "0.25.2", default-features = false }
is_superuser = "1.0.1"
log = { version = "0.4.27", default-features = false }
num_enum = { version = "0.7.4", default-features = false }
paste = { version = "1.0.15", default-features = false }
rand = { version = "0.9.1", default-features = false, features = ["small_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }
sha1 = { version = "0.10.6", default-features = false }
strum = { version = "0.27.1", default-features = false, features = ["derive"] }
tokio = { version = "1.45.1", features = ["net"] }
